# options_analytics

./: .gitignore  LICENSE  Notes  README.md  config.ini.example  config.toml.example  options_analytics.spec  pyproject.toml  ruff.toml  sync_transactions.py
src/etrade_client/: async_client.py  cache_client.py  client.py  exceptions.py  models.py
src/my_little_etrade_server/: README.md  client.py  converters.py  generate_proto.sh  server.py
src/my_little_etrade_server/proto/: my_little_etrade_server.proto
src/options_analytics/: auth.py  config.py  data_kraken.py  etrade.py  fetch_data.py  get_transactions.py  models.py  setup_config.py  update_open_positions.py  update_spreadsheet.py  worksheet.py
src/options_analytics/clients/etrade/: cache_client.py  client.py  models.py  session.py
src/options_analytics/config/: __init__.py
tools/: find_keys_from_log.py  summarize_option_chains.py
